--- a/local/_includes/nav.html
+++ b/local/_includes/nav.html
@@ -3,5 +3,12 @@
   <p>Local documentation for your site's plugins.</p>
   <nav class='main-nav' role='navigation'>
     <a href="/">Home</a>
+    {% assign doc_pages = page.docs %}
+    {% if doc_pages.size > 1 %}
+    {% for doc in doc_pages %}
+    <a href="{{ doc.url }}">{{ doc.title }}</a>
+    {% endfor %}
+    {% endif %}
   </nav>
 </header>
+
